fixed overlap problem autocompile form in first load

--- a/src/app/auth/auth.component.css
+++ b/src/app/auth/auth.component.css
@@ -70,6 +70,9 @@
   padding-left: 20px;
 }
 
+input:-webkit-autofill + input {
+}
+
 input:-webkit-autofill,
 input:-webkit-autofill:hover, 
 input:-webkit-autofill:focus {
